# copilot-task-manager-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.aidocs/: api-spec.md  implementation-plan.md  prd.md  technical-design.md  vs-code-integration.md
.github/instructions/: tdd.instructions.md
.github/prompts/: ImplementNextStep.prompt.md
src/copilot_task_manager/: __init__.py
src/copilot_task_manager/models/: __init__.py  task.py
src/copilot_task_manager/server/: __init__.py  __main__.py  mcp_server.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_sample.py
tests/unit/database/: test_task_crud.py
tests/unit/models/: test_task_model.py
tests/unit/server/: __init__.py  test_mcp_server.py
