[tool.poetry]
name = "copilot_task_manager_mcp"
version = "0.1.0"
description = "A Task Manager Model Context Protocol (MCP) server for managing tasks"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "copilot_task_manager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = {extras = ["cli"], version = "^2.3.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.3"
isort = "^5.12"
flake8 = "^6.0"
mypy = "^1.3"
pre-commit = "^4.2.0"
pytest-asyncio = "<0.26.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
